--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -63,7 +63,7 @@
                 Articles
             </h1>
         </header>
-        <div class="grid lg:grid-cols-3 md:grid-cols-2 animate-fadein">
+        <div class="grid lg:grid-cols-3 md:grid-cols-2 animate-fadein gap-2">
             <% blogPosts.forEach(item => { %>
                 <a href="/blog/<%= item.slug %>">
                 <div class="card sm:py-4" data-slug="<%= item.slug %>" id="card">
