--- a/Views/blog.ejs
+++ b/Views/blog.ejs
@@ -9,19 +9,22 @@
 </head>
 <body>
     <%- include('navbar')%>
-<div class="bg-gray-300 py-12 px-12 md:col-span-4 sm:px-2 animate-fadein" id="content">
-    <div class="px-8 justify-center items-center self-center justify-items-center flex flex-col">
-        <h1 class="text-4xl font-bold"><%= post.title %> </h1>
-        <h2 class="flex flex-row"><%= post.date %> <%= post.author %></h2>
-        <p>Share</p>
-        <div class="p-6 m-4 " data-url="https://codedcarer.com/Blog/<%- post.slug %>" data-title="<%- post.title %>" data-desc="...">
-            <a class="button" data-id="vk">VK</a>
+<div class="bg-gray-300 py-8 md:col-span-4 animate-fadein" id="content">
+    <div class="md:flex md:flex-row sm:flex-col justify-center items-center text-center">
+        <div class="md:flex md:flex-col mt-4 flex-shrink justify-center items-center">
+        <img class="md:w-72 md:h-56 mb-4 px-6" src="/Views/imgs/coded.jpeg" />
+        <h1 class="lg:text-4xl font-bold mb-4 md:text-3xl text-xl sm:text-center"><%= post.title %> </h1>
+        <h2 class="sm:text-xs font-Roboto md:text-sm sm:text-center"><%= post.date %> / <%= post.author %></h2>
+        </div>
+        <div class="m-6 md:flex md:flex-col space-y-2 md:space-x-2 sm:text-sm md:text-base text-xs flex-wrap flex-shrink-0" data-url="https://codedcarer.com/Blog/<%- post.slug %>" data-title="<%- post.title %>" data-desc="...">
+            <h1 class="mb-4">Share</h1>
+            <a class="button" data-id="re">Reddit</a>
             <a class="button"  data-id="fb">Facebook</a>
             <a class="button"  data-id="tw">Twitter</a>
             <a class="button"  data-id="tg">Telegram</a>  
         </div>
     </div>
-    <div class="px-8 py-8">
+    <div class="md:px-20 py-12">
     <p><%- html %></p>
     </div>
     </div>
@@ -35,7 +38,7 @@
                     <a aria-label="Link to my Linkedin profile" rel="noopener" href="https://www.linkedin.com/in/marlon-stevenson-510738109/" target="_blank"><svg class="social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a>
                 </li>
                 <li>
-                    <a aria-label="Link to my Twwitter account" rel="noopener" href="https://twitter.com/Maestvenlon" target="_blank"><svg class="social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"/></svg></a>
+                    <a aria-label="Link to my Twitter account" rel="noopener" href="https://twitter.com/Maestvenlon" target="_blank"><svg class="social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"/></svg></a>
                 </li>
             </ul>
         </div>
