--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@
 }
 
 .social {
-    @apply w-8 h-8 inset-x-0 transform transition duration-500 hover:-translate-y-1 fill-current hover:text-blue-500;
+    @apply w-8 h-8 inset-x-0 transform transition duration-500 hover:-translate-y-1 fill-current hover:text-blue-700;
 }
 
 .hide {
@@ -24,5 +24,5 @@
 }
 
 .button {
-    @apply cursor-pointer transition duration-500 ease-in-out bg-gray-100 hover:bg-blue-700 transform hover:-translate-y-1 hover:scale-110 text-black font-bold py-2 px-4 rounded shadow-md;
+    @apply cursor-pointer transition duration-500 ease-in-out bg-gray-100 hover:bg-blue-700 transform hover:-translate-y-1 hover:scale-110 text-black font-semibold py-1 px-2 sm:mt-6 rounded shadow-md;
 }
