--- a/src/styles.css
+++ b/src/styles.css
@@ -24,5 +24,5 @@
 }
 
 .button {
-    @apply cursor-pointer transition duration-500 ease-in-out bg-gray-100 hover:bg-blue-700 transform hover:-translate-y-1 hover:scale-110 text-black font-semibold py-1 px-2 sm:mt-6 rounded shadow-md;
+    @apply mt-1 m-1 cursor-pointer transition duration-500 ease-in-out bg-gray-100 hover:bg-blue-700 transform hover:-translate-y-1 hover:scale-110 text-black font-semibold py-1 px-2 sm:mt-6 rounded shadow-md;
 }
