--- a/Views/blog.ejs
+++ b/Views/blog.ejs
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/Views/output.css" rel="stylesheet">
-    <title>Blog Main of Coded Career with Career Content</title>
+    <title><%= post.title %>></title>
+    <meta name="description" content="<%= post.description %>">
+    <meta name="keywords" content="<%= post.keywords %>">
+    <meta name="name" content="<%= post.author %>">
 </head>
 <body>
     <%- include('navbar')%>
 <div class="bg-gray-300 py-8 md:col-span-4 animate-fadein" id="content">
     <div class="md:flex md:flex-row sm:flex-col justify-center items-center text-center">
         <div class="md:flex md:flex-col mt-4 flex-shrink justify-center items-center">
-        <img class="md:w-72 md:h-56 mb-4 px-6" src="/Views/imgs/coded.png" alt="Career Front Page Image"/>
+        <img class="md:w-72 md:h-56 mb-4 px-6" src="/Views/imgs/coded.png" alt="Career Front Page Image" width="500" height="300"/>
         <h1 class="lg:text-4xl font-bold mb-4 md:text-3xl text-xl sm:text-center"><%= post.title %> </h1>
         <h2 class="sm:text-xs font-Roboto md:text-sm sm:text-center"><%= post.date %> / <%= post.author %></h2>
         </div>
@@ -46,7 +49,7 @@
         </div>
     </footer>
 </body>
-<script src="/Views/app.js"></script>
+<script defer src="/Views/app.js"></script>
 <script src="/Views/share.js"></script>
 <script src="//cdn.jsdelivr.net/npm/share-buttons/dist/share-buttons.js"></script>
 </html>
