--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/Views/output.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
-    <title>Blog</title>
+    <title>Coded Career</title>
+    <meta name="description" content="Guidance to career growth and success. Articles focused on developing yourself and mastering control of your career">
+    <meta name="keywords" content="Career, Employability, Promotion, Promotion, Success, Growth, Master, Career Path, Career Ladder">
+    <meta name="name" content="Marlon Stevenson">
 </head>
 <body class="min-h-screen">
     <div id="root"></div> <!-- Navbar start-->
@@ -68,7 +71,7 @@
                 <a href="/blog/<%= item.slug %>">
                 <div class="card sm:py-4" data-slug="<%= item.slug %>" id="card">
                     <h1 class="text-blue-600 px-2 md:text-lg lg:text-xl sm:text-lg font-bold py-2 font-Roboto flex justify-center"><%= item.title %></h4>
-                  <img class="rounded-md w-100 h-auto px-2 py-4 object-cover" src="<%= item.thumbnail %>" alt="Thumbnail image for <%= item.title %> blog post"></img>
+                  <img class="rounded-md w-auto h-auto px-2 py-4 object-cover" src="<%= item.thumbnail %>" alt="Thumbnail image for <%= item.title %> blog post" width="500" height="300"></img>
                   <div>
                     <h2 class="text-sm font-Inter px-2 pb-4 flex justify-center"><%= item.date %> - <%= item.author %></h4>
                   </div>
@@ -94,5 +97,5 @@
     </footer>
 </div>
 </body>
-<script src="Views/app.js"></script>
+<script defer src="Views/app.js"></script>
 </html>
