--- a/src/styles.css
+++ b/src/styles.css
@@ -8,11 +8,11 @@
 @tailwind utilities;
 
 .card {
-    @apply bg-white rounded-sm shadow-md transform transition duration-500 hover:-translate-y-1 hover:shadow-lg mb-4 sm:py-4;
+    @apply bg-white rounded-sm shadow-md transform transition duration-500 hover:-translate-y-1 hover:shadow-lg mb-4 sm:py-4 w-auto;
 }
 
 .navText {
-    @apply text-gray-500 hover:text-gray-800 lg:text-sm sm:text-xs md:text-xs font-Press font-light;
+    @apply text-gray-500 hover:text-gray-800 lg:text-sm sm:text-base md:text-base font-Press font-light;
 }
 
 .social {
@@ -24,5 +24,5 @@
 }
 
 .button {
-    @apply mt-1 m-1 cursor-pointer transition duration-500 ease-in-out bg-gray-100 hover:bg-blue-700 transform hover:-translate-y-1 hover:scale-110 text-black font-semibold py-1 px-2 sm:mt-6 rounded shadow-md;
+    @apply mt-1 m-1 cursor-pointer transition duration-500 ease-in-out bg-gray-100 hover:bg-blue-700 transform hover:-translate-y-1 hover:scale-110 text-black font-semibold px-2 sm:mt-6 rounded shadow-md;
 }
